--- a/resources/sass/_layout.scss
+++ b/resources/sass/_layout.scss
@@ -1,7 +1,3 @@
-body {
-  color: $text-base;
-}
-
 .body-fullscreen {
   min-height: 100vh;
   background: url('/storage/bg_office.jpg') #29004e no-repeat fixed;
@@ -61,96 +57,203 @@ a.text-normal {
 .text-warning-pastel {
   color: $pastel-orange !important;
 }
+$sidebar-width: 250px;
 
-$navbar-height: 80px;
-$mdy-green: #3baa34;
-$sidebar-width: 140px;
+body {
+  color: $text-base;
+}
 
 .sidebar {
   position: fixed;
   top: 0;
   left: 0;
-  background-color: $white;
-  min-height: 100vh;
   width: $sidebar-width;
-  border-right: 2px solid $border;
-  z-index: 1;
+  height: 100vh;
+  background-color: $white;
+  border-right: 1px solid $gray-200;
+  z-index: 2;
+
+  .sidebar-nav {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .sidebar-menu,
+  .sidebar-bottom-menu {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+  }
+
+  .navbar-brand {
+    padding: 1.5rem;
+    width: 100%;
+    color: $gray-900;
+    font-weight: 700;
+  }
+
+  .nav-title {
+    letter-spacing: 1px;
+    font-size: 0.75rem;
+    color: $gray-500;
+    font-weight: 700;
+    text-transform: uppercase;
+    padding-left: 1.5rem;
+    margin-top: 1rem;
+
+    &:first-child {
+      margin-top: 0;
+    }
+  }
 
   .nav-link {
     font-weight: 700;
-    color: $text-lighter-1;
-    padding: 0.25rem;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 25rem;
+    position: relative;
+    color: $gray-500;
+    padding: 0.75rem 1.5rem;
 
+    &:hover,
     &.active {
-      color: $green;
-      background-color: $body-bg;
+      color: $gray-700;
 
-      &:hover {
-        color: $green;
-        background-color: $body-bg;
+      .icon {
+        color: $blue;
       }
     }
 
-    &:hover {
-      color: $green;
+    &[data-toggle="collapse"] {
+      color: $gray-700;
+
+      .icon {
+        color: $blue;
+      }
+    }
+
+    &.collapsed[data-toggle="collapse"] {
+      color: $gray-500;
+
+      .icon {
+        color: $gray-500;
+      }
+
+      &:hover,
+      &.active {
+        color: $gray-500;
+
+        .icon {
+          color: $gray-500;
+        }
+      }
+    }
+
+    &[data-toggle="collapse"]:after {
+      font-family: 'Font Awesome 5 Pro';
+      font-weight: 900;
+      content: '\f107';
+      display: block;
+      position: absolute;
+      top: 50%;
+      right: 1.5rem;
+      color: $blue;
+      transform: translateY(-50%) rotate(180deg);
+      transition: all 250ms ease-in-out;
+    }
+
+    &.collapsed[data-toggle="collapse"]:after {
+      transform: translateY(-50%) rotate(0deg);
+      color: $gray-500;
+    }
+
+    .icon {
+      color: $gray-500;
+      margin-right: 0.5rem;
     }
   }
 
-  a {
-    color: $text-lighter-1;
+  .nav-item {
+    .collapse, .collapsing {
+      padding-left: 2.25rem;
+
+      .nav-link {
+        color: $gray-500;
+
+        &:hover,
+        &.active {
+          color: $gray-700;
+        }
+      }
+    }
+  }
+
+  .sidebar-bottom-menu {
+    margin-top: auto;
+    width: 100%;
+    text-align: center;
+
+    & .dropdown-menu {
+      width: calc(100% - 2rem);
+      margin-left: calc(1rem - 5px);
+    }
   }
 }
 
-.admin-content {
+.page-content {
+  display: flex;
+  flex-direction: column;
   margin-left: $sidebar-width;
-  color: $text-base;
+  min-height: 100vh;
 
-  & .text-muted {
-    color: #8a8ca6 !important;
-  }
-
-  & .shadow {
-    box-shadow: 0 0.5rem 1rem rgba(96, 0, 255, 0.15) !important;
+  .container-fluid {
+    flex: 1;
+    padding: 4rem;
   }
 }
 
-#mobile-overlay {
-  position: absolute;
+#footer {
+  border-top: 1px solid $gray-200;
+}
+
+.full-page {
+  background-color: #e96d65;
+}
+
+#page-content-overlay {
+  position: fixed;
   top: 0;
   left: 0;
-  bottom: 0;
   right: 0;
-  background-color: rgba(0, 0, 0, 0.8);
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
   z-index: 1;
 }
 
+.mobile-nav {
+  padding: 2rem 2rem 0 2rem;
+}
+
+.btn-mobile-nav {
+  height: 48px;
+  width: 48px;
+  background-color: transparent;
+  border: 0;
+}
+
 @media (screen and max-width: map_get($grid-breakpoints, 'md')) {
-  .page-wrapper {
-    position: relative;
-  }
-
   .sidebar {
-    width: calc(#{$sidebar-width} + 100px);
-    display: none;
+    left: auto;
+    right: 100%;
 
-    .nav-link {
-      display: block;
-      padding: 0.5rem 1rem;
+    &.show {
+      right: 0;
     }
   }
 
-  .sidebar.show {
-    display: flex;
-    left: auto;
-    right: 0;
-    z-index: 99;
-  }
-
-  .admin-content {
+  .page-content {
     margin-left: 0;
+
+    .container-fluid {
+      padding: 2rem;
+    }
   }
 }
