--- a/resources/sass/_layout.scss
+++ b/resources/sass/_layout.scss
@@ -209,6 +209,12 @@ body {
     flex: 1;
     padding: 4rem;
   }
+
+  .container {
+    flex: 1;
+    padding-top: 4rem;
+    padding-bottom: 4rem;
+  }
 }
 
 #footer {
