Implements order details

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11158,6 +11158,10 @@ body {
   .page-content .container-xl {
     padding: 2rem;
   }
+
+  .page-content .container {
+    padding: 2rem;
+  }
 }
 
 .btn {
