--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11104,8 +11104,7 @@ body {
 
 .page-content .container {
   flex: 1;
-  padding-top: 4rem;
-  padding-bottom: 4rem;
+  padding: 4rem 2rem;
 }
 
 #footer {
