--- a/resources/sass/components/_icons.scss
+++ b/resources/sass/components/_icons.scss
@@ -4,7 +4,7 @@
   justify-content: center;
   height: 1.5rem;
   width: 1.5rem;
-  font-style: 16px;
+  font-size: 16px;
 
   &.icon-sm {
     height: 1rem;
