Possible fix for slow requests

--- a/resources/sass/_layout.scss
+++ b/resources/sass/_layout.scss
@@ -149,7 +149,7 @@ body {
     }
 
     &[data-toggle="collapse"]:after {
-      font-family: 'Font Awesome 5 Pro';
+      font-family: 'Font Awesome 5 Free';
       font-weight: 900;
       content: '\f107';
       display: block;
