--- a/public/css/app.css
+++ b/public/css/app.css
@@ -18240,6 +18240,11 @@ body {
   padding-left: calc(0.75rem + 1.5rem);
 }
 
+.tagify {
+  min-height: calc(1.6em + 0.75rem + 2px);
+  height: auto;
+}
+
 .icon {
   align-items: center;
   display: inline-flex;
