--- a/resources/sass/components/_form.scss
+++ b/resources/sass/components/_form.scss
@@ -14,3 +14,8 @@
 .inner-addon .form-control {
   padding-left: calc(0.75rem + 1.5rem);
 }
+
+.tagify {
+  min-height: calc(1.6em + 0.75rem + 2px);
+  height: auto;
+}
