--- a/resources/sass/components/_form.scss
+++ b/resources/sass/components/_form.scss
@@ -19,3 +19,19 @@
   min-height: calc(1.6em + 0.75rem + 2px);
   height: auto;
 }
+
+body .select2-container .select2-selection--single,
+body .select2-container--default .select2-selection--single{
+  height: calc(1.6em + 0.75rem + 2px);
+  border-color: $input-border-color;
+
+  & .select2-selection__rendered {
+    line-height: calc(1.6em + 0.75rem + 2px);
+    padding: 0 0.75rem;
+  }
+
+  & .select2-selection__arrow {
+    height: calc(1.6em + 0.75rem + 2px);
+    width: calc(1.6em + 0.75rem + 2px - 6px);
+  }
+}
