--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -15,8 +15,8 @@ $red: #e3342f;
 $orange: #f6993f;
 $yellow: #ffed4a;
 $green: #38c172;
-$teal: #00bdca;
-$teal-lighter: #22cbd7;
+$teal: #00aea5;
+$teal-lighter: #1cddd3;
 $cyan: #6cb2eb;
 
 // Az én színeim
