--- a/resources/sass/_layout.scss
+++ b/resources/sass/_layout.scss
@@ -71,7 +71,7 @@ body {
   width: $sidebar-width;
   height: 100vh;
   background-color: $white;
-  border-right: 1px solid $gray-200;
+  //border-right: 1px solid $gray-200;
   z-index: 2;
 
   .sidebar-nav {
@@ -96,9 +96,9 @@ body {
 
   .nav-title {
     letter-spacing: 1px;
-    font-size: 0.75rem;
+    font-size: 0.7rem;
     color: $gray-500;
-    font-weight: 700;
+    font-weight: 600;
     text-transform: uppercase;
     padding-left: 1.5rem;
     margin-top: 1rem;
@@ -109,17 +109,18 @@ body {
   }
 
   .nav-link {
-    font-weight: 700;
+    font-weight: 400;
     position: relative;
     color: $gray-500;
-    padding: 0.75rem 1.5rem;
+    padding: 0.25rem 1.5rem;
+    font-size: 0.8rem;
 
     &:hover,
     &.active {
       color: $gray-700;
 
       .icon {
-        color: $blue;
+        color: $teal;
       }
     }
 
@@ -127,7 +128,7 @@ body {
       color: $gray-700;
 
       .icon {
-        color: $blue;
+        color: $teal;
       }
     }
 
@@ -156,13 +157,13 @@ body {
       position: absolute;
       top: 50%;
       right: 1.5rem;
-      color: $blue;
-      transform: translateY(-50%) rotate(180deg);
+      color: $teal;
+      transform: translateY(-50%) rotate(0deg);
       transition: all 250ms ease-in-out;
     }
 
     &.collapsed[data-toggle="collapse"]:after {
-      transform: translateY(-50%) rotate(0deg);
+      transform: translateY(-50%) rotate(90deg);
       color: $gray-500;
     }
 
