--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -2,7 +2,7 @@
 $body-bg: #f5f9fa;
 
 // Typography
-$font-family-sans-serif: 'Ubuntu', sans-serif;
+$font-family-sans-serif: 'Poppins', sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
 
