--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,5 +1,5 @@
 // Body
-$body-bg: #f5f9fa;
+$body-bg: #f4f6fc;
 
 // Typography
 $font-family-sans-serif: 'Poppins', sans-serif;
@@ -32,7 +32,7 @@ $pastel-blue-lighter: #e2f0ff;
 $pastel-orange: #bc8668;
 $pastel-orange-lighter: #fff6ec;
 
-$text-base: #2b4149;
+$text-base: #2b2c2f;
 $text-lighter-1: #9ba6b2;
 $text-darker-1: #11273d;
 $text-muted: #8a98a1;
