--- a/resources/sass/_layout.scss
+++ b/resources/sass/_layout.scss
@@ -1,5 +1,10 @@
 $sidebar-width: 250px;
 
+html { font-family: $font-family-sans-serif, sans-serif; }
+@supports (font-variation-settings: normal) {
+    html { font-family: $font-family-sans-serif-var, sans-serif; }
+}
+
 .body-fullscreen {
     min-height: 100vh;
     background: url('/storage/bg_office.jpg') #29004e no-repeat fixed;
@@ -223,7 +228,11 @@ body {
 
     .container {
         flex: 1;
-        padding: 4rem 2rem;
+        padding: 4rem 2rem 0 2rem;
+
+        &:last-of-type {
+            padding-bottom: 4rem;
+        }
     }
 }
 
