--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -2,7 +2,8 @@
 $body-bg: #f4f6fc;
 
 // Typography
-$font-family-sans-serif: 'Poppins', sans-serif;
+$font-family-sans-serif: 'Inter', sans-serif;
+$font-family-sans-serif-var: 'Inter var', sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
 
