--- a/public/css/app.css
+++ b/public/css/app.css
@@ -18607,6 +18607,43 @@ body {
   box-shadow: 0 0 0 0.2rem rgba(43, 44, 47, 0.2);
 }
 
+.badge-arrow {
+  border: 1px solid #dee2e6;
+  position: relative;
+  height: 24px;
+  font-size: revert;
+  font-weight: revert;
+  border-top-right-radius: 0 !important;
+  border-bottom-right-radius: 0 !important;
+  padding-left: 0.5rem !important;
+  line-height: 0.9rem;
+}
+
+.badge-arrow::before {
+  content: "";
+  display: block;
+  position: absolute;
+  right: -24px;
+  top: -1px;
+  border-top: 12px solid transparent;
+  border-right: 12px solid transparent;
+  border-bottom: 12px solid transparent;
+  border-left: 12px solid white;
+  z-index: 2;
+}
+
+.badge-arrow::after {
+  content: "";
+  display: block;
+  position: absolute;
+  right: -25px;
+  top: -1px;
+  border-top: 12px solid transparent;
+  border-right: 12px solid transparent;
+  border-bottom: 12px solid transparent;
+  border-left: 12px solid #dee2e6;
+}
+
 .btn {
   font-weight: 700;
   transition: all 250ms ease-in-out;
